fix the overflow in products section

--- a/client/src/app/shopping-page/shopping-page.component.css
+++ b/client/src/app/shopping-page/shopping-page.component.css
@@ -12,5 +12,6 @@ app-cart {
 }
 app-products {
   width: 69vw;
+  overflow-y: auto;
 
 }
